// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> renders properly with default props 1`] = `
<div
  className="spinner "
>
  <FontAwesomeIcon
    border={false}
    className="spinner__icon "
    fixedWidth={false}
    flip={null}
    icon="sync-alt"
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    role="status"
    rotation={null}
    size={null}
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
  <span
    className="screenreaders-only"
  >
    Loading...
  </span>
</div>
`;

exports[`<Spinner /> renders properly with spinnerClasses provided 1`] = `
<div
  className="spinner "
>
  <FontAwesomeIcon
    border={false}
    className="spinner__icon testspinnerclass"
    fixedWidth={false}
    flip={null}
    icon="sync-alt"
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    role="status"
    rotation={null}
    size={null}
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
  <span
    className="screenreaders-only"
  >
    Loading...
  </span>
</div>
`;

exports[`<Spinner /> renders properly with wrapperClasses provided 1`] = `
<div
  className="spinner testwrapperclass"
>
  <FontAwesomeIcon
    border={false}
    className="spinner__icon "
    fixedWidth={false}
    flip={null}
    icon="sync-alt"
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    role="status"
    rotation={null}
    size={null}
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
  <span
    className="screenreaders-only"
  >
    Loading...
  </span>
</div>
`;
